# hKatas

./: README  katas.lkshs  katas.lkshw  stringcalculator.cabal
src/: Main.hs
src/Main/: Calculator.hs  Test.hs
stringcalculator/: stringcalculator.cabal
stringcalculator/src/: Main.hs
stringcalculator/src/Main/: Calculator.hs  Test.hs
